Fixed Title Alignment

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -30,7 +30,7 @@
 }
 
 .title {
-  font-size: 80px;
+  font-size: 60px;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
   align-items: center;
